# src/main/java/de/pikerando/backend/grouporder/logic/api/GroupOrderManagement.java
@@ -1,22 +1,0 @@
-package de.pikerando.backend.grouporder.logic.api;
-
-import java.util.List;
-
-import de.pikerando.backend.general.sevice.model.GroupOrderTo;
-
-/**
- *
- *
- */
-
-public interface GroupOrderManagement {
-  List<GroupOrderTo> listGroupOrders(Integer limit);
-
-  void createGroupOrder(GroupOrderTo groupOrderTo);
-
-  void deleteGroupOrder(Long groupOrderId);
-
-  GroupOrderTo updateStatusOfGroupOrder(Long groupOrderId);
-
-  void updateTotalPrice(Long groupOrderId, Float price);
-}
