# src/main/java/de/pikerando/backend/restaurantmanagement/logic/api/DishManagement.java
@@ -1,0 +1,12 @@
+package de.pikerando.backend.restaurantmanagement.logic.api;
+
+import de.pikerando.backend.general.sevice.model.DishTo;
+
+/**
+ * TODO ykharita This type ...
+ *
+ */
+public interface DishManagement {
+
+  DishTo findDishByDishId(Long dishId);
+}
